Apply idea code analysis suggestions P-security